--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stone Paper Scissor</title>
 </head>
-<body>
+<body style="background-color: rgb(141, 182, 141);">
     <h2>Computer choice: <span id="computerChoice"></span></h2>
     <h2>User choice: <span id="userChoice"></span></h2>
     <h2>Result: <span id="result"></span></h2>
